# idrisr.github.io

./: .devenv.flake.nix  .gitignore  CNAME  TODO  _config.yml  contact.markdown  default.nix  devenv.nix  flake.nix  idrisr-com.cabal  index.md  session.yaml  shell.nix  site.cabal  site.hs
_jupyter/: 2021-04-29-jakes-site.ipynb  2021-05-01-sample.ipynb  2021-05-02-python-descriptors.ipynb  2021-05-17-fastai-function.ipynb  2021-05-17-fastai-function.py  2021-06-03-fastai-function-part2.ipynb  2021-06-04-hough-transform.ipynb  2021-06-26-kaggle-api.ipynb  2021-06-26-kaggle-api.md  format.py  format.sh
_pages/: about.md
_posts/: 2012-04-09-knn.markdown  2014-05-14-compiling-a-custom-linux-kernel-with-lirc-multi-gpio-output-enabled-for-the-raspberry-pi.markdown  2014-09-26-regression-differences-in-r-and-python.markdown  2015-10-14-debugging-a-debugger.markdown  2016-05-15-Removing-Apple-Copyright-Notices.md  2016-05-29-Improving-LLDBs-Backtrace.md  2016-06-11-Dive-Into-iOS-URL-Caching.markdown  2016-06-12-Dive-Into-iOS-URL-Caching-Part-2.markdown  2018-06-13-Faster-Test-Launches.md  2018-06-29-Universal-iOS-links.md  2021-04-29-jakes-site.md  2021-05-01-sample.md  2021-05-02-python-descriptors.md  2021-05-17-fastai-function.md  2021-06-03-fastai-function-part2.md  2021-06-04-hough-transform.md  2021-06-26-kaggle-api.md
_script/: my.tpl  mycfg.py
docs/: CNAME  contact.html  index.html
static/: index.html
templates/: index.html
